# git_hasher

./: .gitignore  Cargo.toml  README.md  appveyor.yml  git_hasher_config.toml
src/: main.rs
